# xdrpp

./: .gitignore  AUTHORS  COPYING  Doxyfile  Makefile.am  README  annotated.html  arpc_8cc_source.html  arpc_8h.html  arpc_8h__dep__incl.map  arpc_8h__dep__incl.md5  arpc_8h__incl.map  arpc_8h__incl.md5  arpc_8h_source.html  autocheck_8h.html  autocheck_8h__incl.map  autocheck_8h__incl.md5  autocheck_8h_source.html  build__endian_8h.html  build__endian_8h__dep__incl.map  build__endian_8h__dep__incl.md5  build__endian_8h_source.html  cereal_8h.html  cereal_8h__incl.map  cereal_8h__incl.md5  cereal_8h_source.html  classes.html  classxdr_1_1_ini_line-members.html  classxdr_1_1_ini_line.html  classxdr_1_1_ini_line__coll__graph.map  classxdr_1_1_ini_line__coll__graph.md5  classxdr_1_1arpc__server-members.html  classxdr_1_1arpc__server.html  classxdr_1_1arpc__server__coll__graph.md5  classxdr_1_1arpc__server__inherit__graph.map  classxdr_1_1arpc__server__inherit__graph.md5  classxdr_1_1arpc__service-members.html  classxdr_1_1arpc__service.html  classxdr_1_1arpc__service__coll__graph.map  classxdr_1_1arpc__service__coll__graph.md5  (+1013 more)
doc/: mainpage.md  xdrc.1.md
include/xdrc/: cereal.h  clear.h  endian.h.in  exception.h  marshal.h  message.h  msgbuf.h  msgsock.h  pollset.h  printer.h  rpcbind.x  server.h  socket.h  srpc.h  types.h
msvc_xdrpp/include/xdrpp/: config.h
msvc_xdrpp/xdrc/: xdrc.vcxproj
msvc_xdrpp/xdrpp/: xdrpp.vcxproj
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  defines_1.js  enums_0.js  (+48 more)
tests/: arpc.cc  autocheck.cc  cereal.cc  compare.cc  listener.cc  marshal.cc  msgsock.cc  printer.cc  srpc.cc  stacklim.cc  validate.cc  xdrtest.x
xdrc/: gen_hh.cc  gen_server.cc  parse.yy  scan.ll  union.h  xdrc.1.md  xdrc.cc  xdrc_internal.h
xdrpp/: arpc.cc  arpc.h  autocheck.h  cereal.h  clear.h  compare.h  depth_checker.h  endian.h  endian.h.in  exception.h  iniparse.h  marshal.cc  marshal.h  message.h  msgsock.cc  msgsock.h  pollset.cc  pollset.h  printer.cc  printer.h  rpc_msg.cc  rpcbind.cc  rpcbind.h  server.cc  server.h  socket.cc  socket.h  socket_unix.cc  srpc.cc  srpc.h  types.h
xmsg/: iniparse.cc  marshal.cc  msgsock.cc  msgsock.h  pollset.cc  printer.cc  rpc_msg.cc  rpc_msg.x  server.cc  socket.cc  srpc.cc
